; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_superequalizer.c_win.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_superequalizer.c_win.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { float, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (%struct.TYPE_4__*, float, i32)* @win to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @win(%struct.TYPE_4__* %0, float %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store float %1, float* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @alpha(i32 %10)
  %12 = load float, float* %5, align 4
  %13 = fmul float 4.000000e+00, %12
  %14 = load float, float* %5, align 4
  %15 = fmul float %13, %14
  %16 = load i32, i32* %6, align 4
  %17 = sub nsw i32 %16, 1
  %18 = load i32, i32* %6, align 4
  %19 = sub nsw i32 %18, 1
  %20 = mul nsw i32 %17, %19
  %21 = sitofp i32 %20 to float
  %22 = fdiv float %15, %21
  %23 = fsub float 1.000000e+00, %22
  %24 = fptosi float %23 to i32
  %25 = call i32 @sqrtf(i32 %24)
  %26 = mul nsw i32 %11, %25
  %27 = call float @izero(%struct.TYPE_4__* %7, i32 %26)
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load float, float* %29, align 4
  %31 = fdiv float %27, %30
  ret float %31
}

declare dso_local float @izero(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @alpha(i32) #1

declare dso_local i32 @sqrtf(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
